--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
 
 /*////////// GLOBAL //////////*/
 
+<head>
+name="viewport", content="width=device-width, 
+initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
+</head>
+
 body {
   font-size: 100%;
 }
